強化文章：添加效率對比表格、流程圖和風險邊界
- 新增具體的效率提升數據對比表格（10-100倍提升）
- 添加 AI 實作 Excel 清洗的完整流程圖
- 新增「AI 能力的風險邊界」章節，包含：
  * AI 幻覺問題
  * 邊界情況仍需資深工程師
  * 資安與隱私把關
  * 過度依賴的風險
  * 成本與效益平衡
- 讓文章更平衡、更具說服力
- 包含中英文版本

--- a/content/processed/ai-development-efficiency-revolution.en.html
+++ b/content/processed/ai-development-efficiency-revolution.en.html
@@ -80,6 +80,71 @@
 <li><strong>Dramatically shortened time estimates</strong>: Building a system that works with real "legacy" data from order, income, and expense tables can now be estimated in days, not months.</li>
 </ul>
 
+<h3>Concrete Efficiency Improvement Data</h3>
+
+<p>The following is a time comparison between traditional approaches and AI-assisted development (based on estimates from actual project experience):</p>
+
+<table>
+<thead>
+<tr>
+<th>Task</th>
+<th>Traditional Time</th>
+<th>AI Era Time</th>
+<th>Efficiency Gain</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Multi-format Excel cleaning</td>
+<td>2–4 weeks</td>
+<td>1–3 days</td>
+<td>10–20x</td>
+</tr>
+<tr>
+<td>New format exception adjustments</td>
+<td>1–2 days</td>
+<td>5–10 minutes</td>
+<td>50–100x</td>
+</tr>
+<tr>
+<td>Layout and format adjustments</td>
+<td>2–4 hours</td>
+<td>3–5 minutes</td>
+<td>30–50x</td>
+</tr>
+<tr>
+<td>Explanatory text and comments</td>
+<td>30–60 minutes</td>
+<td>1–2 minutes</td>
+<td>30–50x</td>
+</tr>
+<tr>
+<td>Complete system development (orders/income/expenses)</td>
+<td>1–3 months</td>
+<td>3–7 days</td>
+<td>10–30x</td>
+</tr>
+</tbody>
+</table>
+
+<p>These figures clearly demonstrate the efficiency revolution brought by AI tools. Work that previously required weeks or even months can now be completed in days, without compromising quality.</p>
+
+<h3>AI Excel Cleaning Workflow</h3>
+
+<p>The following is the standard workflow for using AI tools to process Excel data cleaning:</p>
+
+<ol>
+<li><strong>Receive client Excel</strong>: Receive the original Excel file from the client</li>
+<li><strong>Use AI to list exceptions</strong>: Have AI analyze the Excel structure, automatically identify and list all format exceptions, field differences, special markers, etc.</li>
+<li><strong>Senior Engineer confirms logic</strong>: Senior engineers review the exceptions identified by AI, confirm business logic and conversion rules</li>
+<li><strong>AI generates cleaning script</strong>: Based on confirmed logic, AI generates a complete data cleaning script</li>
+<li><strong>Validate with 3 months of data</strong>: Use actual data from multiple months for validation to ensure the script handles various exceptions</li>
+<li><strong>Adjust edge cases</strong>: Quickly adjust the script for edge cases discovered during validation</li>
+<li><strong>Deploy</strong>: After validation passes, officially deploy for use</li>
+</ol>
+
+<p>The key to this workflow is: <strong>AI handles repetitive code generation and preliminary analysis, while senior engineers are responsible for logic confirmation and quality assurance</strong>. This collaborative model ensures both efficiency and quality.</p>
+
 <p>This case clearly demonstrates how AI tools change the cost structure of digitalization in traditional industries. Data conversion work that previously required massive time and resources can now be completed at minimal cost while maintaining high quality.</p>
 
 <h2>Cognitive Gaps and the Chaotic Era</h2>
@@ -143,6 +208,52 @@
 <h3>5. Continuous Learning and Adjustment</h3>
 
 <p>AI tools and technologies are rapidly developing, requiring continuous learning of new usage methods and best practices. At the same time, adjust workflows and tool choices based on actual usage experience.</p>
+
+<h2>The Risk Boundaries of AI Capabilities</h2>
+
+<p>While AI tools bring tremendous efficiency improvements, we must also clearly understand AI's limitations to use it more safely and effectively:</p>
+
+<h3>1. AI is Prone to Hallucination</h3>
+
+<p>AI may generate code or logic that seems reasonable but is actually incorrect. It might "fabricate" non-existent APIs, incorrect function names, or solutions that seem logically correct but don't actually meet requirements. Therefore, <strong>all AI-generated code must undergo human review and testing</strong>—it cannot be trusted directly.</p>
+
+<h3>2. Edge Cases Still Require Senior Engineers</h3>
+
+<p>While AI can handle most common scenarios, when encountering complex edge cases, special business logic, or problems requiring deep domain knowledge, it still needs senior engineers' judgment and handling. AI tools are amplifiers, but <strong>cannot completely replace senior engineers' professional judgment</strong>.</p>
+
+<h3>3. Security and Privacy Still Need Oversight</h3>
+
+<p>When using AI tools, you must be aware of:</p>
+
+<ul>
+<li><strong>Sensitive data handling</strong>: Do not directly input sensitive data such as customer information or financial data into public AI services</li>
+<li><strong>Code security review</strong>: AI-generated code may contain security vulnerabilities and must undergo professional security review</li>
+<li><strong>Compliance considerations</strong>: Ensure the way AI tools are used complies with relevant regulations and company policies</li>
+</ul>
+
+<h3>4. Risks of Over-Dependence</h3>
+
+<p>Over-reliance on AI tools may lead to:</p>
+
+<ul>
+<li><strong>Skill degradation</strong>: Developers may lose the ability to write code manually and think deeply</li>
+<li><strong>Insufficient understanding</strong>: Understanding of systems may remain superficial, unable to handle complex problems</li>
+<li><strong>Limited innovation</strong>: Over-reliance on AI's standard solutions may limit innovative thinking</li>
+</ul>
+
+<p>Therefore, <strong>AI tools should serve as auxiliary tools, not complete replacements for developers' thinking and learning</strong>.</p>
+
+<h3>5. Balancing Cost and Benefit</h3>
+
+<p>While AI tools significantly improve efficiency, you should also note:</p>
+
+<ul>
+<li><strong>AI service costs</strong>: Using AI services (such as API calls) may generate ongoing costs</li>
+<li><strong>Verification costs</strong>: Although verification costs are reduced, time still needs to be invested in review and testing</li>
+<li><strong>Learning costs</strong>: Teams need to learn how to effectively use AI tools, which also requires time investment</li>
+</ul>
+
+<p>The key is finding the optimal balance between cost and benefit, allowing AI tools to maximize value in appropriate scenarios.</p>
 
 <h2>Recommendations for Traditional Industries</h2>
 
