--- a/content/processed/ai-development-efficiency-revolution.html
+++ b/content/processed/ai-development-efficiency-revolution.html
@@ -80,6 +80,71 @@
 <li><strong>時間估算大幅縮短</strong>：從訂單、收、支等數張表要做出一個客戶用真實「老舊」資料可以使用的系統，現在可以以天為單位估計，而不是以月為單位。</li>
 </ul>
 
+<h3>效率提升的具體數據對比</h3>
+
+<p>以下是實際開發中，傳統方式與 AI 輔助開發的時間對比（基於實際專案經驗的估算）：</p>
+
+<table>
+<thead>
+<tr>
+<th>工作項目</th>
+<th>過去耗時</th>
+<th>AI 時代耗時</th>
+<th>效率提升</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>多格式 Excel 清洗</td>
+<td>2–4 週</td>
+<td>1–3 天</td>
+<td>10–20 倍</td>
+</tr>
+<tr>
+<td>新格式例外調整</td>
+<td>1–2 天</td>
+<td>5–10 分鐘</td>
+<td>50–100 倍</td>
+</tr>
+<tr>
+<td>排版與格式調整</td>
+<td>2–4 小時</td>
+<td>3–5 分鐘</td>
+<td>30–50 倍</td>
+</tr>
+<tr>
+<td>說明文字與註解</td>
+<td>30–60 分鐘</td>
+<td>1–2 分鐘</td>
+<td>30–50 倍</td>
+</tr>
+<tr>
+<td>完整系統開發（訂單/收支）</td>
+<td>1–3 個月</td>
+<td>3–7 天</td>
+<td>10–30 倍</td>
+</tr>
+</tbody>
+</table>
+
+<p>這些數據清楚地展示了 AI 工具帶來的效率革命。過去需要數週甚至數月的工作，現在可以在數天內完成，而且品質不減。</p>
+
+<h3>AI 實作 Excel 清洗的流程</h3>
+
+<p>以下是使用 AI 工具處理 Excel 數據清洗的標準流程：</p>
+
+<ol>
+<li><strong>拿到客戶 Excel</strong>：接收客戶提供的原始 Excel 檔案</li>
+<li><strong>用 AI 先讓它列出例外</strong>：讓 AI 分析 Excel 結構，自動識別並列出所有格式例外、欄位差異、特殊標記等</li>
+<li><strong>Senior Engineer 確認邏輯</strong>：資深工程師審查 AI 識別的例外情況，確認業務邏輯和轉換規則</li>
+<li><strong>AI 產生清洗腳本</strong>：根據確認的邏輯，AI 生成完整的數據清洗腳本</li>
+<li><strong>用 3 個月份資料驗證</strong>：使用多個月份的實際數據進行驗證，確保腳本能處理各種例外情況</li>
+<li><strong>調整 edge cases</strong>：針對驗證過程中發現的邊界情況，快速調整腳本</li>
+<li><strong>上線</strong>：驗證通過後，正式上線使用</li>
+</ol>
+
+<p>這個流程的關鍵在於：<strong>AI 負責重複性的代碼生成和初步分析，而資深工程師負責邏輯確認和品質把關</strong>。這樣的協作模式既保證了效率，也確保了品質。</p>
+
 <p>這個案例清楚地展示了 AI 工具如何改變傳統產業數位化的成本結構。過去需要大量時間和資源的數據轉換工作，現在可以在保持高品質的前提下，以極小成本完成。</p>
 
 <h2>認知差距與混沌時代</h2>
@@ -143,6 +208,52 @@
 <h3>5. 持續學習與調整</h3>
 
 <p>AI 工具和技術都在快速發展，需要持續學習新的使用方法和最佳實踐。同時，也要根據實際使用經驗，調整工作流程和工具選擇。</p>
+
+<h2>AI 能力的風險邊界</h2>
+
+<p>雖然 AI 工具帶來了巨大的效率提升，但我們也必須清楚地認識到 AI 的局限性，才能更安全、更有效地運用它：</p>
+
+<h3>1. AI 容易產生幻覺（Hallucination）</h3>
+
+<p>AI 可能會生成看似合理但實際上錯誤的代碼或邏輯。它可能會「編造」不存在的 API、錯誤的函數名稱，或是邏輯上看似正確但實際上不符合需求的解決方案。因此，<strong>所有 AI 生成的代碼都必須經過人工審查和測試</strong>，不能直接信任。</p>
+
+<h3>2. 處理邊界情況仍需資深工程師</h3>
+
+<p>雖然 AI 可以處理大部分常見情況，但當遇到複雜的邊界情況、特殊的業務邏輯、或是需要深度領域知識的問題時，仍然需要資深工程師的判斷和處理。AI 工具是放大器，但<strong>不能完全替代資深工程師的專業判斷</strong>。</p>
+
+<h3>3. 資安與隱私仍需把關</h3>
+
+<p>使用 AI 工具時，必須注意：</p>
+
+<ul>
+<li><strong>敏感資料處理</strong>：不要將包含客戶資料、財務資訊等敏感數據直接輸入到公開的 AI 服務中</li>
+<li><strong>代碼安全審查</strong>：AI 生成的代碼可能包含安全漏洞，必須經過專業的安全審查</li>
+<li><strong>合規性考量</strong>：確保使用 AI 工具的方式符合相關法規和公司政策</li>
+</ul>
+
+<h3>4. 過度依賴的風險</h3>
+
+<p>過度依賴 AI 工具可能導致：</p>
+
+<ul>
+<li><strong>技能退化</strong>：開發者可能失去手寫代碼和深度思考的能力</li>
+<li><strong>理解不足</strong>：對系統的理解可能停留在表面，無法處理複雜問題</li>
+<li><strong>創新受限</strong>：過度依賴 AI 的標準解決方案，可能限制創新思維</li>
+</ul>
+
+<p>因此，<strong>AI 工具應該作為輔助工具，而不是完全替代開發者的思考和學習</strong>。</p>
+
+<h3>5. 成本與效益的平衡</h3>
+
+<p>雖然 AI 工具大幅提升了效率，但也要注意：</p>
+
+<ul>
+<li><strong>AI 服務成本</strong>：使用 AI 服務（如 API 調用）可能產生持續的成本</li>
+<li><strong>驗證成本</strong>：雖然驗證成本降低了，但仍需要投入時間進行審查和測試</li>
+<li><strong>學習成本</strong>：團隊需要學習如何有效使用 AI 工具，這也需要時間投入</li>
+</ul>
+
+<p>關鍵在於找到成本與效益的最佳平衡點，讓 AI 工具在合適的場景發揮最大價值。</p>
 
 <h2>給傳統產業的建議</h2>
 
