添加文章創作過程說明和圖片
- 新增後記章節，說明這篇文章是透過 AI 對話式協作完成的
- 添加創作過程截圖，展示 IDE 中的 AI 助手與即時預覽的並排視圖
- 強調「一邊聊天一邊產出」的 AI 輔助開發模式
- 這篇文章本身就是文中所描述的 AI 輔助開發的實際案例
- 包含中英文版本

--- a/content/processed/ai-development-efficiency-revolution.en.html
+++ b/content/processed/ai-development-efficiency-revolution.en.html
@@ -274,5 +274,15 @@
 
 <p>But remember, AI tools are amplifiers, not replacements. They need clear logic and rich experience to maximize value. In this chaotic era, maintaining learning, continuous experimentation, and establishing verification mechanisms will help you find your place in the AI era.</p>
 
+<h2>Postscript: The Creation Process of This Article</h2>
+
+<p>This article itself is a real-world case study of AI-assisted development. The entire article was completed through conversational collaboration with an AI assistant (Cursor): from the initial draft, gradually refining the content, adding real-world cases, supplementing efficiency comparison data, to finally adding risk boundary analysis—the entire process was completed iteratively through conversation.</p>
+
+<p>On the left is the AI assistant providing suggestions and modifications in the IDE, and on the right is the blog article being previewed in real-time. This "chat while creating" approach is exactly the embodiment of the AI-assisted development model described in this article: humans with clear logic provide direction and judgment, while AI handles specific content generation and formatting, ultimately completing high-quality content output at minimal cost.</p>
+
+<img src="/images/ai-development-efficiency-revolution-creation-process.png" alt="AI-assisted article creation process: Left side shows the AI assistant in Cursor IDE providing suggestions and modifications, right side shows the blog article being previewed in real-time, demonstrating the conversational collaborative creation process">
+
+<p>This not only proves the practicality of AI tools in the content creation field but also demonstrates the core argument: "People with clear logic and rich experience, combined with AI tools, can complete work that previously required massive time at minimal cost."</p>
+
 <hr>
 <p><em>This article explores how AI is changing development efficiency and the opportunities and challenges traditional industries face in this era. We hope it helps enterprises and individuals thinking about digital transformation.</em></p>
