--- a/content/processed/ai-development-efficiency-revolution.html
+++ b/content/processed/ai-development-efficiency-revolution.html
@@ -274,5 +274,15 @@
 
 <p>但同時也要記住，AI 工具是放大器，不是替代品。它需要清晰的邏輯和豐富的經驗才能發揮最大價值。在這個混沌的時代，保持學習、持續嘗試、建立驗證機制，才能在 AI 時代中找到屬於自己的位置。</p>
 
+<h2>後記：這篇文章的創作過程</h2>
+
+<p>這篇文章本身就是 AI 輔助開發的一個實際案例。整篇文章是透過與 AI 助手（Cursor）的對話式協作完成的：從最初的草稿、逐步完善內容、添加實際案例、補充效率對比數據，到最後加入風險邊界分析，整個過程都是在對話中迭代完成的。</p>
+
+<p>左側是 AI 助手在 IDE 中提供建議和修改，右側是即時預覽的部落格文章。這種「一邊聊天一邊產出」的方式，正是本文所描述的 AI 輔助開發模式的體現：邏輯清晰的人類提供方向和判斷，AI 負責具體的內容生成和格式處理，最終以極小成本完成高品質的內容產出。</p>
+
+<img src="/images/ai-development-efficiency-revolution-creation-process.png" alt="AI 輔助文章創作過程：左側顯示 Cursor IDE 中的 AI 助手正在提供建議和修改，右側顯示即時預覽的部落格文章，展示了對話式協作創作過程">
+
+<p>這不僅證明了 AI 工具在內容創作領域的實用性，也展示了「邏輯清晰、經驗豐富的人，配合 AI 工具，可以以極低成本完成過去需要大量時間的工作」這一核心論點。</p>
+
 <hr>
 <p><em>這篇文章探討了 AI 如何改變開發效率，以及傳統產業在這個時代面臨的機遇與挑戰。希望對正在思考數位化轉型的企業和個人有所幫助。</em></p>
